# evil-jira-be-like

./: Cargo.toml
src/: lib.rs  main.rs
src/audio/: mod.rs  player_trait.rs  sin_player.rs
src/gui/: mod.rs  window.rs  window_trait.rs
src/jira/: client.rs  client_trait.rs  mod.rs  user_worklogs.rs  user_worklogs_fetcher.rs  user_worklogs_fetcher_trait.rs  worklog.rs
src/time_tracker/: mod.rs  summary.rs  summary_trait.rs  user_worklogs_summary.rs  worklog_summary.rs
