[package]
name = "evil-jira-be-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65" }
chrono = { version = "0.4.22" }
lazy_static = { version = "1.4.0"}
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144" }
serde_json = { version = "1.0.85" }

[dev-dependencies]
mockall = { version = "0.11.2" }
mockito = { version = "0.31.0" }
